Edit README and add images folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                                 <td>{{result.Priority}}</td>
                                 <td>{{result.DueDate}}</td>
                                 <td>{{result.Status}}</td>
-                                <td><a type="button" href="/update/{{result.id}}" class="btn btn-outline-warning">Edit</a></td>
+                                <td><a type="button" href="/update/{{result.id}}" class="btn btn-outline-primary">Edit</a></td>
                                 <td><a type="button" href="/delete/{{result.id}}" class="btn btn-outline-danger"  >Delete</a></td>
 
                             </tr>
